SEO Rebranding: Aligning all pages with Commercial Kitchen Ventilation focus, 200+ clients history, 2008 establishment, and LA-centric messaging. Updated URL structure and implemented new premium service imagery.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="features-grid grid-balance-3">
                 <!-- Service 1 -->
                 <div class="premium-service-card"
-                    style="background-image: url('/images/commercial-hvac.webp'); border: 5px solid var(--secondary-color);">
+                    style="background-image: url('/images/kitchen-ventilation-service.png'); border: 5px solid var(--secondary-color);">
                     <i class="fas fa-utensils card-icon"></i>
                     <h3 style="font-size: 1.8rem;">Kitchen Ventilation</h3>
                     <p>Commercial Hood Installs<br>
@@ -170,12 +170,12 @@
                         Make-Up Air Systems<br>
                         Fire Suppression Link<br>
                         Grease Duct Sealing</p>
-                    <a href="/services/commercial-hvac/" class="learn-more">Specialty Details <i
+                    <a href="/services/kitchen-ventilation/" class="learn-more">Specialty Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Service 2 -->
-                <div class="premium-service-card" style="background-image: url('/images/custom-hvac.webp');">
+                <div class="premium-service-card" style="background-image: url('/images/luxury-home-hvac.png');">
                     <i class="fas fa-home card-icon"></i>
                     <h3>Custom Home HVAC</h3>
                     <p>Luxury Estate Cooling<br>
@@ -183,12 +183,13 @@
                         Zoned Climate Control<br>
                         Quiet-Run Technology<br>
                         Smart Home Integration</p>
-                    <a href="/services/custom-hvac/" class="learn-more">Learn More <i
+                    <a href="/services/custom-home-hvac/" class="learn-more">Learn More <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Service 3 -->
-                <div class="premium-service-card" style="background-image: url('/images/commercial-hvac.webp');">
+                <div class="premium-service-card"
+                    style="background-image: url('/images/commercial-building-hvac.png');">
                     <i class="fas fa-city card-icon"></i>
                     <h3>Commercial Buildings</h3>
                     <p>Rooftop Unit Service<br>
@@ -203,7 +204,7 @@
                 <!-- Service 4 -->
                 <div class="premium-service-card" style="background-image: url('/images/air-quality.webp');">
                     <i class="fas fa-wind card-icon"></i>
-                    <h3>Air Quality</h3>
+                    <h3>Indoor Air Quality</h3>
                     <p>Duct Cleaning & Sealing<br>
                         UV Air Purifiers<br>
                         HEPA Filtration<br>
@@ -214,20 +215,7 @@
                 </div>
 
                 <!-- Service 5 -->
-                <div class="premium-service-card" style="background-image: url('/images/custom-hvac.webp');">
-                    <i class="fas fa-home card-icon"></i>
-                    <h3>Custom Solutions</h3>
-                    <p>Custom Home Builds<br>
-                        Architectural HVAC<br>
-                        Retrofitting<br>
-                        Zoned Cooling<br>
-                        Wine Cellar Support</p>
-                    <a href="/services/custom-hvac/" class="learn-more">Learn More <i
-                            class="fas fa-arrow-right"></i></a>
-                </div>
-
-                <!-- Service 6 -->
-                <div class="premium-service-card" style="background-image: url('/images/maintenance.webp');">
+                <div class="premium-service-card" style="background-image: url('/images/hvac-maintenance-pro.png');">
                     <i class="fas fa-clipboard-check card-icon"></i>
                     <h3>Maintenance Plans</h3>
                     <p>Seasonal Tune-Ups<br>
@@ -235,7 +223,21 @@
                         Discounted Repairs<br>
                         Extended Life Spans<br>
                         Peace of Mind</p>
-                    <a href="/services/maintenance-plans/" class="learn-more">Learn More <i
+                    <a href="/services/maintenance/" class="learn-more">Learn More <i
+                            class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <!-- Service 6 -->
+                <div class="premium-service-card"
+                    style="background-image: url('/images/hvac-main-hero.png'); background-size: cover; background-position: center;">
+                    <i class="fas fa-snowflake card-icon"></i>
+                    <h3>Air Conditioning</h3>
+                    <p>High-Efficiency Split Systems<br>
+                        Heat Pump Technology<br>
+                        Ductless Solutions<br>
+                        Performance Testing<br>
+                        LA Heat Specialists</p>
+                    <a href="/services/air-conditioning/" class="learn-more">Learn More <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -579,10 +581,10 @@
                         <ul>
                             <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                             <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                            <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                             <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                            <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                            <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                            <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                            <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                            <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                         </ul>
                     </div>
 
