--- a/services/commercial-hvac/index.html
+++ b/services/commercial-hvac/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commercial HVAC | Advanced Mechanical HVAC Services</title>
+    <title>Commercial Building HVAC Solutions | Advanced Mechanical</title>
     <meta name="description"
-        content="Institutional-grade commercial HVAC services in Southern California. Rooftop units, tenant improvements, and complex system engineering since 2008.">
+        content="Institutional-grade HVAC engineering for commercial buildings, offices, and industrial sites across Southern California. Established in 2008 with 200+ clients.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,12 +47,12 @@
 
     <!-- Hero Section -->
     <section class="av-hvac-hero page-hero"
-        style="background-image: url('/images/commercial-hvac.webp'); background-size: cover; background-position: center;">
+        style="background-image: url('/images/commercial-building-hvac.png'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Commercial HVAC Engineering</h1>
-            <p>High-performance climate control for industrial buildings, retail spaces, and institutional projects
-                across Southern California.</p>
+            <h1>Commercial Building HVAC Solutions</h1>
+            <p>Institutional-grade HVAC engineering for commercial properties, industrial sites, and multi-tenant
+                complexes across Los Angeles, Orange, and Ventura Counties.</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="/contact/" class="btn btn-secondary">Project Bid Request</a>
@@ -65,20 +65,26 @@
         <div class="container">
             <div style="display: grid; grid-template-columns: 3fr 2fr; gap: 60px;">
                 <div class="details-content">
-                    <h2>Institutional-Grade Expertise</h2>
+                    <h2>Institutional Climate Control</h2>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
-                        Advanced Mechanical has been a trusted partner for commercial property owners and facility
-                        managers in Southern California since 2008. We understand the high stakes of commercial climate
-                        control, where system failure can impact productivity and revenue.
+                        Advanced Mechanical is a Los Angeles based established business, proudly serving Southern
+                        California including Los Angeles, Orange, and Ventura Counties. Since 2008, we have worked with
+                        over 200 clients to bring comfort and climate environment satisfaction to large-scale
+                        properties.
                     </p>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
-                        Our team specializes in the installation, maintenance, and repair of large-capacity rooftop
-                        units (RTUs), chillers, and complex multi-zone systems. We bring a high level of engineering
-                        precision to tenant improvement projects and new commercial builds.
+                        We specialize in providing satisfactory environment climate control solutions for commercial
+                        buildings, ensuring that high-performance environments operate with maximum efficiency. From
+                        rooftop units to multi-zone controls, we bring the same level of engineering precision to every
+                        project.
                     </p>
 
                     <h3>Our Commercial Capabilities:</h3>
                     <ul style="list-style: none; padding: 0; margin: 25px 0;">
+                        <li style="margin-bottom: 15px; display: flex; align-items: center;">
+                            <i class="fas fa-utensils" style="color: var(--secondary-color); margin-right: 15px;"></i>
+                            Commercial Kitchen Ventilation Installs (Our Specialty)
+                        </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
@@ -87,12 +93,7 @@
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Tenant Improvement (TI) Projects
-                        </li>
-                        <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-check-circle"
-                                style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Multi-Zone Control Systems
+                            Satisfactory Climate Control Solutions
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
@@ -142,20 +143,21 @@
                 </p>
             </div>
             <div class="aw-footer-services">
-                                <h4>Our Services</h4>
+                <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
-                                <h4>Service Areas</h4>
+                <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li><li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
+                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li>
+                    <li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
                     <li><a href="/locations/">Palmdale, CA</a></li>
                     <li><a href="/locations/">Los Angeles County</a></li>
                     <li><a href="/locations/">Orange County</a></li>
@@ -165,7 +167,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
