--- a/services/custom-home-hvac/index.html
+++ b/services/custom-home-hvac/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom HVAC Solutions | Advanced Mechanical HVAC Services</title>
+    <title>Custom Home HVAC Installations | Los Angeles Architectural HVAC</title>
     <meta name="description"
-        content="Custom architectural HVAC design and luxury home climate control in Southern California. Expert engineering and custom ductwork Since 2008.">
+        content="Bespoke climate control for luxury residences across Los Angeles, Orange, and Ventura Counties. Specialized architectural HVAC engineering since 2008.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,12 +47,12 @@
 
     <!-- Hero Section -->
     <section class="av-hvac-hero page-hero"
-        style="background-image: url('/images/custom-hvac.webp'); background-size: cover; background-position: center;">
+        style="background-image: url('/images/luxury-home-hvac.png'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Custom HVAC Engineering</h1>
-            <p>Bespoke climate control for luxury residences and specialized high-performance architectural projects.
-            </p>
+            <h1>Custom Home HVAC Installations</h1>
+            <p>Bespoke climate control for luxury residences and specialized high-performance architectural projects in
+                Los Angeles, Orange, and Ventura Counties.</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="/contact/" class="btn btn-secondary">Architectural Consultation</a>
@@ -142,20 +142,21 @@
                 </p>
             </div>
             <div class="aw-footer-services">
-                                <h4>Our Services</h4>
+                <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
-                                <h4>Service Areas</h4>
+                <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li><li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
+                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li>
+                    <li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
                     <li><a href="/locations/">Palmdale, CA</a></li>
                     <li><a href="/locations/">Los Angeles County</a></li>
                     <li><a href="/locations/">Orange County</a></li>
@@ -165,7 +166,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
