--- a/services/index.html
+++ b/services/index.html
@@ -103,27 +103,28 @@
 
                 <!-- Commercial Kitchen Ventilation (Flagship) -->
                 <div class="premium-service-card"
-                    style="background-image: url('/images/commercial-hvac.webp'); border: 5px solid var(--secondary-color);">
+                    style="background-image: url('/images/kitchen-ventilation-service.png'); border: 5px solid var(--secondary-color);">
                     <i class="fas fa-utensils card-icon"></i>
                     <h3 style="font-size: 1.8rem;">Kitchen Ventilation</h3>
                     <p>Our top-quality specialty. Custom hood installs, exhaust systems, and climate control for
                         demanding commercial kitchen environments.</p>
-                    <a href="/services/commercial-hvac/" class="learn-more">Get Specialty Service <i
+                    <a href="/services/kitchen-ventilation/" class="learn-more">Get Specialty Service <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Custom Home HVAC -->
-                <div class="premium-service-card" style="background-image: url('/images/custom-hvac.webp');">
+                <div class="premium-service-card" style="background-image: url('/images/luxury-home-hvac.png');">
                     <i class="fas fa-home card-icon"></i>
                     <h3>Custom Home HVAC</h3>
                     <p>Bespoke heating and cooling engineering for premium residential properties and architectural home
                         builds.</p>
-                    <a href="/services/custom-hvac/" class="learn-more">Service Details <i
+                    <a href="/services/custom-home-hvac/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Commercial Buildings -->
-                <div class="premium-service-card" style="background-image: url('/images/commercial-hvac.webp');">
+                <div class="premium-service-card"
+                    style="background-image: url('/images/commercial-building-hvac.png');">
                     <i class="fas fa-city card-icon"></i>
                     <h3>Commercial Buildings</h3>
                     <p>Institutional-grade HVAC solutions for offices, industrial sites, and multi-tenant commercial
@@ -143,12 +144,12 @@
                 </div>
 
                 <!-- Maintenance Plans -->
-                <div class="premium-service-card" style="background-image: url('/images/maintenance.webp');">
+                <div class="premium-service-card" style="background-image: url('/images/hvac-maintenance-pro.png');">
                     <i class="fas fa-clipboard-check card-icon"></i>
                     <h3>Maintenance Plans</h3>
                     <p>Established in 2008, we provide long-term care to over 200 clients across Southern California.
                     </p>
-                    <a href="/services/maintenance-plans/" class="learn-more">Service Details <i
+                    <a href="/services/maintenance/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
@@ -221,10 +222,10 @@
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
