--- a/services/kitchen-ventilation/index.html
+++ b/services/kitchen-ventilation/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HVAC Maintenance Plans | Advanced Mechanical HVAC Services</title>
+    <title>Commercial Kitchen Ventilation & HVAC Specialists | Advanced Mechanical</title>
     <meta name="description"
-        content="Professional HVAC maintenance plans in Southern California. Seasonal tune-ups, priority service, and equipment longevity since 2008.">
+        content="Los Angeles's premier specialists in Commercial Kitchen Ventilation. Specializing in high-performance exhaust systems and HVAC for commercial buildings. Established in 2008.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,14 +47,15 @@
 
     <!-- Hero Section -->
     <section class="av-hvac-hero page-hero"
-        style="background-image: url('/images/maintenance.webp'); background-size: cover; background-position: center;">
+        style="background-image: url('/images/kitchen-ventilation-service.png'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Preventative Maintenance Plans</h1>
-            <p>Ensure peak performance and extend the life of your HVAC system with expert preventative care.</p>
+            <h1>Commercial Kitchen Ventilation & HVAC</h1>
+            <p>Our top quality service brings specialized HVAC solutions and Commercial Kitchen Ventilation to buildings
+                across Los Angeles, Orange, and Ventura Counties.</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
-                <a href="/contact/" class="btn btn-secondary">Enroll Now</a>
+                <a href="/contact/" class="btn btn-secondary">Project Bid Request</a>
             </div>
         </div>
     </section>
@@ -64,54 +65,53 @@
         <div class="container">
             <div style="display: grid; grid-template-columns: 3fr 2fr; gap: 60px;">
                 <div class="details-content">
-                    <h2>Protect Your Investment</h2>
+                    <h2>Established Commercial Specialty</h2>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
-                        Regular maintenance is the single most important factor in the longevity and efficiency of your
-                        HVAC system. At Advanced Mechanical, our maintenance plans are designed to identify potential
-                        issues before they become expensive breakdowns.
+                        Advanced Mechanical is a Los Angeles based established business, proudly serving Southern
+                        California including Los Angeles, Orange, and Ventura Counties. Established in 2008, we have
+                        worked with over 200 clients to bring comfort and climate environment satisfaction.
                     </p>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
-                        Our biannual tune-ups (Spring/Fall) cover everything from refrigerant levels and electrical
-                        connections to safety controls and heat exchanger integrity. Members enjoy priority scheduling
-                        and discounts on any necessary repairs.
+                        We are particularly recognized for our specialty: <strong>Commercial Kitchen Ventilation
+                            Installs</strong>. We provide top-quality service for demanding environments, ensuring that
+                        commercial kitchens operate with maximum efficiency and safety.
                     </p>
 
-                    <h3>Maintenance Plan Benefits:</h3>
+                    <h3>Our Commercial Capabilities:</h3>
                     <ul style="list-style: none; padding: 0; margin: 25px 0;">
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-check-circle"
-                                style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Priority Emergency Service
+                            <i class="fas fa-utensils" style="color: var(--secondary-color); margin-right: 15px;"></i>
+                            Commercial Kitchen Ventilation Installs (Our Specialty)
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Reduced Energy Consumption
+                            Rooftop Unit (RTU) Replacement & Service
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Validated Parts Warranties
+                            Satisfactory Climate Control Solutions
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Improved System Longevity
+                            Preventative Maintenance Contracts
                         </li>
                     </ul>
                 </div>
                 <div class="details-sidebar">
                     <div class="sidebar-card"
                         style="background: var(--primary-navy); padding: 40px; border-radius: 20px; color: white;">
-                        <h4 style="color: white; margin-bottom: 20px;">Peace of Mind</h4>
-                        <p style="opacity: 0.9; margin-bottom: 25px;">Join our maintenance family today and never worry
-                            about your climate control again.</p>
+                        <h4 style="color: white; margin-bottom: 20px;">Commercial Priority Service</h4>
+                        <p style="opacity: 0.9; margin-bottom: 25px;">We offer priority response for our commercial
+                            maintenance partners to ensure minimal downtime.</p>
                         <a href="tel:8186602481" class="btn btn-primary"
-                            style="width: 100%; text-align: center; display: block;">Plan Details</a>
+                            style="width: 100%; text-align: center; display: block;">(818) 660-2481</a>
                         <div style="margin-top: 30px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 20px;">
-                            <p style="font-size: 0.9rem; opacity: 0.8;">"Since joining their plan, our energy bills have
-                                dropped significantly. Worth every penny."</p>
-                            <p style="font-weight: 700; margin-top: 10px;">— Thomas M., Santa Clarita</p>
+                            <p style="font-size: 0.9rem; opacity: 0.8;">"Advanced Mechanical handled our 25-unit rooftop
+                                replacement perfectly. Professional and on budget."</p>
+                            <p style="font-weight: 700; margin-top: 10px;">— Robert L., Facility Manager</p>
                         </div>
                     </div>
                 </div>
@@ -141,20 +141,21 @@
                 </p>
             </div>
             <div class="aw-footer-services">
-                                <h4>Our Services</h4>
+                <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
-                                <h4>Service Areas</h4>
+                <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li><li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
+                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li>
+                    <li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
                     <li><a href="/locations/">Palmdale, CA</a></li>
                     <li><a href="/locations/">Los Angeles County</a></li>
                     <li><a href="/locations/">Orange County</a></li>
@@ -164,7 +165,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
