--- a/services/maintenance/index.html
+++ b/services/maintenance/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Areas | Advanced Mechanical HVAC Services</title>
+    <title>HVAC Maintenance Plans | Advanced Mechanical Southern California</title>
     <meta name="description"
-        content="Advanced Mechanical HVAC Services provides expert AC and heating solutions across Southern California, including Los Angeles, Santa Clarita, and Los Angeles.">
+        content="Professional HVAC maintenance plans for Los Angeles, Orange, and Ventura Counties. Seasonal tune-ups and priority service since 2008. Over 200 clients served.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/services/">Services</a></li>
+                    <li><a href="/services/" class="active">Services</a></li>
                     <li><a href="/about/">About Us</a></li>
                     <li><a href="/contact/">Contact</a></li>
                 </ul>
@@ -47,66 +47,73 @@
 
     <!-- Hero Section -->
     <section class="av-hvac-hero page-hero"
-        style="background-image: url('/images/hvac-main-hero.png'); background-size: cover; background-position: center; padding: 100px 0;">
+        style="background-image: url('/images/hvac-maintenance-pro.png'); background-size: cover; background-position: center;">
+        <div class="hero-overlay"></div>
         <div class="container">
-            <h1 style="color: white;">Our Service Areas</h1>
-            <p style="color: white; opacity: 0.9;">Expert HVAC solutions throughout Southern California's primary
-                counties and communities.</p>
+            <h1>Preventative Maintenance Plans</h1>
+            <p>Ensure peak performance and extend the life of your HVAC system with expert preventative care.</p>
+            <div class="hero-btns">
+                <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
+                <a href="/contact/" class="btn btn-secondary">Enroll Now</a>
+            </div>
         </div>
     </section>
 
-    <!-- Map & Areas -->
-    <section class="service-areas" style="padding: 100px 0;">
+    <!-- Service Details -->
+    <section class="service-details" style="padding: 100px 0;">
         <div class="container">
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: start;">
-                <div>
-                    <h2>Serving the Southern California Region</h2>
-                    <p style="margin-bottom: 25px; font-size: 1.1rem; color: #444;">
-                        Advanced Mechanical is proud to offer comprehensive residential and commercial HVAC services
-                        across dynamic regions of Southern California. From the High Desert to the San Fernando Valley,
-                        our team provides rapid response and expert engineering.
+            <div style="display: grid; grid-template-columns: 3fr 2fr; gap: 60px;">
+                <div class="details-content">
+                    <h2>Protect Your Investment</h2>
+                    <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
+                        Regular maintenance is the single most important factor in the longevity and efficiency of your
+                        HVAC system. At Advanced Mechanical, our maintenance plans are designed to identify potential
+                        issues before they become expensive breakdowns.
+                    </p>
+                    <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
+                        Our biannual tune-ups (Spring/Fall) cover everything from refrigerant levels and electrical
+                        connections to safety controls and heat exchanger integrity. Members enjoy priority scheduling
+                        and discounts on any necessary repairs.
                     </p>
 
-                    <h3>Primary Counties Served:</h3>
+                    <h3>Maintenance Plan Benefits:</h3>
                     <ul style="list-style: none; padding: 0; margin: 25px 0;">
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-map-marker-alt"
+                            <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Los Angeles County
+                            Priority Emergency Service
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-map-marker-alt"
+                            <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Orange County
+                            Reduced Energy Consumption
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-map-marker-alt"
+                            <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Ventura County
+                            Validated Parts Warranties
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-map-marker-alt"
+                            <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            San Fernando Valley
+                            Improved System Longevity
                         </li>
                     </ul>
-
-                    <h3>Local Communities:</h3>
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                        <div>• Los Angeles</div>
-                        <div>• Santa Clarita</div>
-                        <div>• Palmdale</div>
-                        <div>• Lancaster</div>
-                        <div>• Rosamond</div>
-                        <div>• San Fernando Valley</div>
-                    </div>
                 </div>
-                <div class="map-wrapper"
-                    style="border-radius: 30px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.1); height: 500px;">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105844.6!2d-118.5!3d34.4!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c260!2sSanta%20Clarita%2C%20CA!5e0!3m2!1sen!2sus!4v1703112345678!5m2!1sen!2sus"
-                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="details-sidebar">
+                    <div class="sidebar-card"
+                        style="background: var(--primary-navy); padding: 40px; border-radius: 20px; color: white;">
+                        <h4 style="color: white; margin-bottom: 20px;">Peace of Mind</h4>
+                        <p style="opacity: 0.9; margin-bottom: 25px;">Join our maintenance family today and never worry
+                            about your climate control again.</p>
+                        <a href="tel:8186602481" class="btn btn-primary"
+                            style="width: 100%; text-align: center; display: block;">Plan Details</a>
+                        <div style="margin-top: 30px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 20px;">
+                            <p style="font-size: 0.9rem; opacity: 0.8;">"Since joining their plan, our energy bills have
+                                dropped significantly. Worth every penny."</p>
+                            <p style="font-weight: 700; margin-top: 10px;">— Thomas M., Santa Clarita</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -138,9 +145,10 @@
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
