--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
 
     <!-- Page Hero -->
     <section class="av-hvac-hero page-hero"
-        style="background-image: url('/images/hvac-hero-v2.webp'); background-size: cover; background-position: center; min-height: 500px; display: flex; align-items: center;">
+        style="background-image: url('/images/hvac-main-hero.png'); background-size: cover; background-position: center; min-height: 500px; display: flex; align-items: center;">
         <div class="hero-overlay"></div>
         <div class="container">
             <span
@@ -357,10 +357,10 @@
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
