--- a/services/heating-solutions/index.html
+++ b/services/heating-solutions/index.html
@@ -141,20 +141,21 @@
                 </p>
             </div>
             <div class="aw-footer-services">
-                                <h4>Our Services</h4>
+                <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
+                    <li><a href="/services/kitchen-ventilation/">Kitchen Ventilation</a></li>
                     <li><a href="/services/commercial-hvac/">Commercial HVAC</a></li>
-                    <li><a href="/services/air-quality/">Indoor Air Quality</a></li>
-                    <li><a href="/services/maintenance-plans/">Maintenance Plans</a></li>
-                    <li><a href="/services/custom-solutions/">Custom HVAC Solutions</a></li>
+                    <li><a href="/services/maintenance/">Maintenance Plans</a></li>
+                    <li><a href="/services/custom-home-hvac/">Custom Home HVAC</a></li>
                 </ul>
             </div>
             <div class="aw-footer-locations">
-                                <h4>Service Areas</h4>
+                <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li><li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
+                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li>
+                    <li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
                     <li><a href="/locations/">Palmdale, CA</a></li>
                     <li><a href="/locations/">Los Angeles County</a></li>
                     <li><a href="/locations/">Orange County</a></li>
@@ -164,7 +165,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
